# sui-binaries

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: build-localnet-tools.yml  build-seal.yml  build-suibase-daemon.yml  prune-releases.yml  site-builder-mainnet-release copy.yml  site-builder-release.yml  site-builder-testnet-release.yml  sui-min-devnet-release.yml  sui-min-mainnet-release.yml  sui-min-release.yml  sui-min-testnet-release.yml
docs/dev/: SEAL_FEATURE.md
scripts/: build-seal.sh  get-latest-seal-version.sh  get-latest-sui-version.sh  prune-old-releases.sh  strip-sui-tarball.sh
triggers/localnet-tools/: Cargo.toml
